[gd_scene load_steps=4 format=3 uid="uid://d1ythd6ae2rml"]

[ext_resource type="Script" path="res://gates_section.gd" id="1_pkwyy"]
[ext_resource type="PackedScene" uid="uid://c87bws1kti2bs" path="res://half_gate.tscn" id="2_1pxvo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2kbqh"]
size = Vector2(1083.75, 90.5)

[node name="GatesSection" type="Node2D"]
process_mode = 4
script = ExtResource( "1_pkwyy" )

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
process_mode = 3
position = Vector2(520.5, 280)
scale = Vector2(53.65, 17.9)

[node name="Area2D" type="Area2D" parent="."]
process_mode = 3
position = Vector2(2, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(495, 315)
shape = SubResource( "RectangleShape2D_2kbqh" )

[node name="Part1" parent="." instance=ExtResource( "2_1pxvo" )]
position = Vector2(0, 137)

[node name="Part2" parent="." instance=ExtResource( "2_1pxvo" )]
position = Vector2(1, 229)

[node name="Part3" parent="." instance=ExtResource( "2_1pxvo" )]
position = Vector2(1023, 183)
rotation = -3.14159

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
